--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "testMatch": [ "**/?(*.)+(spec|test).[jt]s?(x)" ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
